Tests/CarlTests/CompilerTests/negative/missing-comparison.carl
automaton Test {
    world { dimension: 2 }
    rules {
        Dead -> Alive when count_neighbors(Alive) == 
    }
}
